--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 cargo-nextest = "0.9.49"
 clap = { version = "4.1.4", features = ["derive", "cargo"] }
+fuzzy-matcher = "0.3.7"
 lazy_static = "1.4.0"
+priority-queue = "1.3.1"
 regex = "1.7.1"
 reqwest = { version = "0.11.14", features = ["blocking"] }
 thiserror = "1.0.38"
