--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cargo-nextest = "0.9.49"
 clap = { version = "4.1.4", features = ["derive", "cargo"] }
 fuzzy-matcher = "0.3.7"
 lazy_static = "1.4.0"
+mockall = "0.11.3"
 priority-queue = "1.3.1"
 regex = "1.7.1"
 reqwest = { version = "0.11.14", features = ["blocking"] }
