--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ lazy_static = "1.4.0"
 log = "0.4.17"
 mockall = "0.11.3"
 priority-queue = "1.3.1"
+rand = "0.8.5"
 regex = "1.7.1"
 reqwest = { version = "0.11.14", features = ["blocking"] }
 thiserror = "1.0.38"
