--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ rand = "0.8.5"
 regex = "1.7.1"
 reqwest = { version = "0.11.14", features = ["blocking"] }
 thiserror = "1.0.38"
+tokio = "1.25.0"
