--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ priority-queue = "1.3.1"
 rand = "0.8.5"
 regex = "1.7.1"
 reqwest = { version = "0.11.14", features = ["blocking"] }
+serde = "1.0.152"
 thiserror = "1.0.38"
 tokio = "1.25.0"
