--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ clap = { version = "4.1.4", features = ["derive", "cargo"] }
 error-stack = "0.3.1"
 fern = { version = "0.6.1", features = ["colored"] }
 fuzzy-matcher = "0.3.7"
+indicatif = "0.17.3"
 lazy_static = "1.4.0"
 log = "0.4.17"
 mockall = "0.11.3"
+mockito = "0.32.3"
 priority-queue = "1.3.1"
 rand = "0.8.5"
 regex = "1.7.1"
